deployment issue fixed

--- a/index.html
+++ b/index.html
@@ -6,14 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Shop the latest shoe styles at Shoe Shop. Free shipping on all orders for EID 2024.">
     <title>Shoe Shop - Home</title>
-    <link rel="icon" href="/assets/favicon.svg">
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
+    <link rel="icon" href="./assets/favicon.svg">
+    <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body itemscope itemtype="http://schema.org/WebPage">
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <div class="top-text" itemprop="headline">Free Shipping on all orders for EID 2024</div>
 
     <!-- Navigation -->
@@ -33,16 +32,16 @@
                         <input type="text" placeholder="Search products...">
                         <button>Search</button>
                         <a href="#" class="user">
-                            <img src="/assets/svg/user-tick-svgrepo-com.svg" alt="User account">
+                            <img src="./assets/svg/user-tick-svgrepo-com.svg" alt="User account">
                         </a>
 
                         <a href="#" class="cart">
-                            <img src="/assets/svg/cart-alt-1-svgrepo-com.svg" alt="Shopping cart">
+                            <img src="./assets/svg/cart-alt-1-svgrepo-com.svg" alt="Shopping cart">
                             <div class="cart-notification">7</div>
                         </a>
 
                         <a href="#" class="favourite">
-                            <img src="/assets/svg/heart-svgrepo-com.svg" alt="favourite Items">
+                            <img src="./assets/svg/heart-svgrepo-com.svg" alt="favourite Items">
                             <div class="favourite-notification">0</div>
                         </a>
                     </li>
@@ -60,21 +59,21 @@
             <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active hero" style="background-image: url('/images/carousel-image_2.jpg')">
+            <div class="carousel-item active hero" style="background-image: url('./images/carousel-image_2.jpg')">
                 <div class="carousel-caption d-none d-md-block text-upper">
                     <h5 class="big-title">Nike</h5>
                     <p class="big-text">Discover the latest men's lifestyle and activewear from Nike.</p>
                 </div>
             </div>
 
-            <div class="carousel-item hero" style="background-image: url('/images/carousel-image_3.jpg')">
+            <div class="carousel-item hero" style="background-image: url('./images/carousel-image_3.jpg')">
                 <div class="carousel-caption d-none d-md-block text-left">
                     <h5 class="big-title">Adidas</h5>
                     <p class="big-text">Shop the latest selection of adidas Ultra Boost Shoes at Foot Locker.</p>
                 </div>
             </div>
 
-            <div class="carousel-item hero" style="background-image: url('/images/carousel-image_1.jpg')">
+            <div class="carousel-item hero" style="background-image: url('./images/carousel-image_1.jpg')">
                 <div class="carousel-caption d-none d-md-block text-middle">
                     <h5 class="big-title">UGG Australia</h5>
                     <p class="big-text">100% Australian Made UGG Boots, UGG Slippers, Sheepskins & Accessories
@@ -100,7 +99,7 @@
         <div class="p-container">
             <div class="product-card">
                 <div class="sale">Sale!</div>
-                <img class="product-image" src="images/product_1.jpg" alt="Training shoe">
+                <img class="product-image" src="./images/product_1.jpg" alt="Training shoe">
                 <a class="quick-view-button" href="#">
                     <div class="quick-view">Quick View</div>
                 </a>
@@ -110,12 +109,12 @@
                     <div class="stars">
                         ★★★★☆
                     </div>
-                    <a href="#" onclick="goToProductPage('images/product_1.jpg')">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('./images/product_1.jpg')">Shop Now</a>
                 </div>
             </div>
 
             <div class="product-card">
-                <img class="product-image" src="images/product_2.jpg" alt="Training shoe">
+                <img class="product-image" src="./images/product_2.jpg" alt="Training shoe">
                 <a class="quick-view-button" href="#">
                     <div class="quick-view">Quick View</div>
                 </a>
@@ -125,13 +124,13 @@
                     <div class="stars">
                         ★★★☆☆
                     </div>
-                    <a href="#" onclick="goToProductPage('images/product_2.jpg')">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('./images/product_2.jpg')">Shop Now</a>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="sale">Sale!</div>
-                <img class="product-image" src="images/product_3.jpg" alt="Training shoe">
+                <img class="product-image" src="./images/product_3.jpg" alt="Training shoe">
                 <a class="quick-view-button" href="#">
                     <div class="quick-view">Quick View</div>
                 </a>
@@ -141,12 +140,12 @@
                     <div class="stars">
                         ★★★★☆
                     </div>
-                    <a href="#" onclick="goToProductPage('images/product_3.jpg')">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('./images/product_3.jpg')">Shop Now</a>
                 </div>
             </div>
 
             <div class="product-card">
-                <img class="product-image" src="images/product_4.jpg" alt="Training shoe">
+                <img class="product-image" src="./images/product_4.jpg" alt="Training shoe">
                 <a class="quick-view-button" href="#">
                     <div class="quick-view">Quick View</div>
                 </a>
@@ -156,12 +155,12 @@
                     <div class="stars">
                         ★★☆☆☆
                     </div>
-                    <a href="#" onclick="goToProductPage('images/product_4.jpg')">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('./images/product_4.jpg')">Shop Now</a>
                 </div>
             </div>
 
             <div class="product-card">
-                <img class="product-image" src="images/product_5.jpg" alt="Training shoe">
+                <img class="product-image" src="./images/product_5.jpg" alt="Training shoe">
                 <a class="quick-view-button" href="#">
                     <div class="quick-view">Quick View</div>
                 </a>
@@ -171,13 +170,13 @@
                     <div class="stars">
                         ★★★☆☆
                     </div>
-                    <a href="#" onclick="goToProductPage('images/product_5.jpg')">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('./images/product_5.jpg')">Shop Now</a>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="sale">Sale!</div>
-                <img class="product-image" src="images/product_6.jpg" alt="Training shoe">
+                <img class="product-image" src="./images/product_6.jpg" alt="Training shoe">
                 <a class="quick-view-button" href="#">
                     <div class="quick-view">Quick View</div>
                 </a>
@@ -187,7 +186,7 @@
                     <div class="stars">
                         ★★★☆☆
                     </div>
-                    <a href="#" onclick="goToProductPage('images/product_6.jpg')">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('./images/product_6.jpg')">Shop Now</a>
                 </div>
             </div>
     </section>
@@ -202,7 +201,7 @@
                 </div>
                 <p>"This product really helped me. Highly recommended!"</p>
                 <div class="author">
-                    <img src="/images/user_1.jpg" alt="Maria Anna">
+                    <img src="./images/user_1.jpg" alt="Maria Anna">
                     <p> - Maria Anna</p>
                 </div>
             </div>
@@ -213,7 +212,7 @@
                 </div>
                 <p>"Excellent customer service. They were always there to help."</p>
                 <div class="author">
-                    <img src="/images/user_2.jpg" alt="Julia Keys">
+                    <img src="./images/user_2.jpg" alt="Julia Keys">
                     <p> - Julia Keys</p>
                 </div>
             </div>
@@ -224,7 +223,7 @@
                 </div>
                 <p>"Fast delivery and high-quality products. I'm very satisfied."</p>
                 <div class="author">
-                    <img src="/images/user_3.jpg" alt="Luis Adrian">
+                    <img src="./images/user_3.jpg" alt="Luis Adrian">
                     <p> - Luis Adrian</p>
                 </div>
             </div>
@@ -280,7 +279,7 @@
         </div>
         <p>&copy;E-Commerce Shoe Store. Powered by E-Commerce Shoe Store.</p>
     </footer>
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
