deployment issue fixed

--- a/product-page.html
+++ b/product-page.html
@@ -5,14 +5,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Product</title>
-    <link rel="icon" href="/assets/favicon.svg">
-    <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="icon" href="./assets/favicon.svg">
+    <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
-    <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="./lib/bootstrap/js/bootstrap.bundle.min.js"></script>
     <div class="top-text">Free Shipping on all orders for EID 2024</div>
 
     <!-- Navigation -->
@@ -31,16 +31,16 @@
                         <input type="text" placeholder="Search products...">
                         <button>Search</button>
                         <a href="" class="user">
-                            <img src="/assets/svg/user-tick-svgrepo-com.svg" alt="User account">
+                            <img src="./assets/svg/user-tick-svgrepo-com.svg" alt="User account">
                         </a>
 
                         <a href="#" class="cart">
-                            <img src="/assets/svg/cart-alt-1-svgrepo-com.svg" alt="Shopping cart">
+                            <img src="./assets/svg/cart-alt-1-svgrepo-com.svg" alt="Shopping cart">
                             <div class="cart-notification">7</div>
                         </a>
 
                         <a href="#" class="favourite">
-                            <img src="/assets/svg/heart-svgrepo-com.svg" alt="favourite Items">
+                            <img src="./assets/svg/heart-svgrepo-com.svg" alt="favourite Items">
                             <div class="favourite-notification">0</div>
                         </a>
                     </li>
@@ -87,9 +87,9 @@
                 <h6 class="product-cat common-style">Categories: Men, Sneaker</h6>
                 <div class="payment-methods">
                     <h6 class="payment-information">Payment Methods</h6>
-                    <img src="/assets/svg/BKash-Logo.wine.svg" alt="Bkash">
-                    <img src="/assets/svg/294654_visa_icon.png" alt="Visa">
-                    <img src="/assets/svg/1933703_charge_credit card_debit_mastercard_payment_icon.png"
+                    <img src="./assets/svg/BKash-Logo.wine.svg" alt="Bkash">
+                    <img src="./assets/svg/294654_visa_icon.png" alt="Visa">
+                    <img src="./assets/svg/1933703_charge_credit card_debit_mastercard_payment_icon.png"
                         alt="Mastercard">
                 </div>
             </div>
@@ -102,7 +102,7 @@
         <div class="p-container">
             <div class="product-card">
                 <div class="sale">Sale!</div>
-                <img class="product-image" src="images/product_1.jpg" alt="Training shoe">
+                <img class="product-image" src="./images/product_1.jpg" alt="Training shoe">
                 <a class="quick-view-button" href="#">
                     <div class="quick-view">Quick View</div>
                 </a>
@@ -112,12 +112,12 @@
                     <div class="stars">
                         ★★★★☆
                     </div>
-                    <a href="#" onclick="goToProductPage('images/product_1.jpg')">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('./images/product_1.jpg')">Shop Now</a>
                 </div>
             </div>
 
             <div class="product-card">
-                <img class="product-image" src="images/product_2.jpg" alt="Training shoe">
+                <img class="product-image" src="./images/product_2.jpg" alt="Training shoe">
                 <a class="quick-view-button" href="#">
                     <div class="quick-view">Quick View</div>
                 </a>
@@ -127,13 +127,13 @@
                     <div class="stars">
                         ★★★☆☆
                     </div>
-                    <a href="#" onclick="goToProductPage('images/product_2.jpg')">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('./images/product_2.jpg')">Shop Now</a>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="sale">Sale!</div>
-                <img class="product-image" src="images/product_3.jpg" alt="Training shoe">
+                <img class="product-image" src="./images/product_3.jpg" alt="Training shoe">
                 <a class="quick-view-button" href="#">
                     <div class="quick-view">Quick View</div>
                 </a>
@@ -143,7 +143,7 @@
                     <div class="stars">
                         ★★★★☆
                     </div>
-                    <a href="#" onclick="goToProductPage('images/product_3.jpg')">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('./images/product_3.jpg')">Shop Now</a>
                 </div>
             </div>
     </section>
@@ -192,7 +192,7 @@
         </div>
         <p>&copy;E-Commerce Shoe Store. Powered by E-Commerce Shoe Store.</p>
     </footer>
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
